--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -250,6 +250,12 @@ footer {
 
 // max-width: 450px
 @media (max-width:28.125rem) {
+    body {
+        background-image: url(../images/bg-intro-mobile.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
     main {
         .titles-section,
         .form-section {
